Import of MKUTTER/SOAP-Lite-0.70_01 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      0.70_01
gitpan-cpan-path:         MKUTTER/SOAP-Lite-0.70_01.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,24 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         SOAP-Lite
-version:      0.69
-version_from: lib/SOAP/Lite.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                SOAP-Lite
+version:             0.70_01
+abstract:            ~
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     Compress::Zlib:                0
     Crypt::SSLeay:                 0
     FCGI:                          0
     HTTP::Daemon:                  0
     IO::File:                      0
+    IO::Socket::SSL:               0
     MIME::Base64:                  0
     MIME::Lite:                    0
-    MIME::Parser:                  6.106
+    MIME::Parser:                  0
     Net::FTP:                      0
     Net::POP3:                     0
     URI:                           0
     XML::Parser:                   2.23
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
