--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                SOAP-Lite
-version:             0.70_01
+version:             0.70_02
 abstract:            ~
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.36
@@ -12,6 +12,7 @@ requires:
     HTTP::Daemon:                  0
     IO::File:                      0
     IO::Socket::SSL:               0
+    LWP::UserAgent:                0
     MIME::Base64:                  0
     MIME::Lite:                    0
     MIME::Parser:                  0
