--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                SOAP-Lite
-version:             0.70_04
+version:             0.70_05
 abstract:            ~
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.36
@@ -18,6 +18,7 @@ requires:
     MIME::Parser:                  0
     Net::FTP:                      0
     Net::POP3:                     0
+    Test::More:                    0
     URI:                           0
     XML::Parser:                   2.23
 meta-spec:
