--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                SOAP-Lite
-version:             0.71.02
+version:             v0.71.03
 abstract:            ~
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.36
