Import of MKUTTER/SOAP-Lite-0.710.07 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      0.710.07
gitpan-cpan-path:         MKUTTER/SOAP-Lite-0.710.07.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,10 @@
 --- #YAML:1.0
 name:                SOAP-Lite
-version:             0.710.06
+version:             0.710.07
 abstract:            ~
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.36
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Compress::Zlib:                0
@@ -24,5 +25,5 @@ requires:
     version:                       0
     XML::Parser:                   2.23
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
