Import of MKUTTER/SOAP-Lite-0.711 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      0.711
gitpan-cpan-path:         MKUTTER/SOAP-Lite-0.711.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               SOAP-Lite
-version:            0.710.10
+version:            0.711
 abstract:           Perl's Web Services Toolkit
 author:
     - Pavel Kulchenko, Randy J Ray, Byrne Reese, Martin Kutter (MKUTTER@cpan.org)
@@ -12,20 +12,18 @@ build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Compress::Zlib:   0
-    constant:         1.14
+    constant:         0
     FCGI:             0
     HTTP::Daemon:     0
     IO::File:         0
     IO::Socket::SSL:  0
     LWP::UserAgent:   0
     MIME::Base64:     0
-    Net::FTP:         0
-    perl:             5.005
+    perl:             5.006
     Scalar::Util:     0
     Task::Weaken:     0
     Test::More:       0
     URI:              0
-    version:          0
     XML::Parser:      2.23
 resources:
     repository:  https://soaplite.svn.sourceforge.net/svnroot/soaplite/branches/0.71
@@ -33,10 +31,11 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
+bugtracker:         https://sourceforge.net/tracker/?group_id=66000&atid=513017
 keywords:
     - SOAP
     - SOAP client
