Import of MKUTTER/SOAP-Lite-0.712 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      0.712
gitpan-cpan-path:         MKUTTER/SOAP-Lite-0.712.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               SOAP-Lite
-version:            0.711
+version:            0.712
 abstract:           Perl's Web Services Toolkit
 author:
     - Pavel Kulchenko, Randy J Ray, Byrne Reese, Martin Kutter (MKUTTER@cpan.org)
@@ -11,27 +11,29 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Compress::Zlib:   0
-    constant:         0
-    FCGI:             0
-    HTTP::Daemon:     0
-    IO::File:         0
-    IO::Socket::SSL:  0
-    LWP::UserAgent:   0
-    MIME::Base64:     0
-    perl:             5.006
-    Scalar::Util:     0
-    Task::Weaken:     0
-    Test::More:       0
-    URI:              0
-    XML::Parser:      2.23
+    Class::Inspector:  0
+    Compress::Zlib:    0
+    constant:          0
+    HTTP::Daemon:      0
+    IO::File:          0
+    IO::Socket::SSL:   0
+    LWP::UserAgent:    0
+    MIME::Base64:      0
+    MIME::Parser:      0
+    Net::POP3:         0
+    perl:              5.006
+    Scalar::Util:      0
+    Task::Weaken:      0
+    Test::More:        0
+    URI:               0
+    XML::Parser:       2.23
 resources:
     repository:  https://soaplite.svn.sourceforge.net/svnroot/soaplite/branches/0.71
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
