--- a/META.yml
+++ b/META.yml
@@ -1,47 +1,44 @@
---- #YAML:1.0
-name:               SOAP-Lite
-version:            0.714
-abstract:           Perl's Web Services Toolkit
+---
+abstract: "Perl's Web Services Toolkit"
 author:
-    - Pavel Kulchenko, Randy J Ray, Byrne Reese, Martin Kutter (MKUTTER@cpan.org)
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Pavel Kulchenko, Randy J Ray, Byrne Reese, Martin Kutter (MKUTTER@cpan.org)'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Class::Inspector:     0
-    Compress::Zlib:       0
-    constant:             0
-    FCGI:                 0
-    HTTP::Daemon:         0
-    IO::File:             0
-    IO::Socket::SSL:      0
-    LWP::UserAgent:       0
-    MIME::Base64:         0
-    MIME::Parser:         0
-    Net::POP3:            0
-    perl:                 5.006
-    Scalar::Util:         0
-    SOAP::Transport::FTP:  0.712
-    SOAP::Transport::JABBER:  0.712
-    Task::Weaken:         0
-    Test::More:           0
-    URI:                  0
-    XML::Parser:          2.23
-resources:
-    repository:  https://soaplite.svn.sourceforge.net/svnroot/soaplite/branches/0.71
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
-meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
-bugtracker:         https://sourceforge.net/tracker/?group_id=66000&atid=513017
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
 keywords:
-    - SOAP
-    - SOAP client
-    - SOAP server
+  - SOAP
+  - 'SOAP client'
+  - 'SOAP server'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: SOAP-Lite
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Class::Inspector: 0
+  Compress::Zlib: 0
+  HTTP::Daemon: 0
+  IO::File: 0
+  IO::Socket::SSL: 0
+  LWP::UserAgent: 0
+  MIME::Base64: 0
+  MIME::Parser: 0
+  Net::POP3: 0
+  Scalar::Util: 0
+  Task::Weaken: 0
+  Test::More: 0
+  URI: 0
+  XML::Parser: 2.23
+  constant: 0
+  perl: 5.006
+resources:
+  repository: https://soaplite.svn.sourceforge.net/svnroot/soaplite/branches/0.71
+version: 0.715
+x_bugtracker: https://sourceforge.net/tracker/?group_id=66000&atid=513017
