--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
 keywords:
   - SOAP
   - 'SOAP client'
@@ -21,6 +21,8 @@ no_index:
   directory:
     - t
     - inc
+    - examples
+    - t
 requires:
   Class::Inspector: 0
   Compress::Zlib: 0
@@ -38,4 +40,4 @@ requires:
   perl: 5.006
 resources:
   repository: https://github.com/redhotpenguin/soaplite
-version: 1.07
+version: 1.08
