--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,11 @@ abstract: "Perl's Web Services Toolkit"
 author:
   - 'Pavel Kulchenko, Randy J Ray, Byrne Reese, Martin Kutter (MKUTTER@cpan.org), Fred Moyer'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.133380'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142690'
 keywords:
   - SOAP
   - 'SOAP client'
@@ -15,7 +15,7 @@ keywords:
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: SOAP-Lite
 no_index:
   directory:
@@ -24,20 +24,20 @@ no_index:
     - examples
     - t
 requires:
-  Class::Inspector: 0
-  Compress::Zlib: 0
-  Crypt::SSLeay: 0
-  IO::SessionData: 1.03
-  IO::Socket::SSL: 0
-  LWP::UserAgent: 0
-  MIME::Base64: 0
-  Scalar::Util: 0
-  Task::Weaken: 0
-  Test::More: 0
-  URI: 0
-  XML::Parser: 2.23
-  constant: 0
-  perl: 5.006
+  Class::Inspector: '0'
+  Compress::Zlib: '0'
+  Crypt::SSLeay: '0'
+  IO::SessionData: '1.03'
+  IO::Socket::SSL: '0'
+  LWP::UserAgent: '0'
+  MIME::Base64: '0'
+  Scalar::Util: '0'
+  Task::Weaken: '0'
+  Test::More: '0'
+  URI: '0'
+  XML::Parser: '2.23'
+  constant: '0'
+  perl: '5.006'
 resources:
   repository: https://github.com/redhotpenguin/soaplite
-version: 1.12
+version: '1.13'
